style.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, 
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    background-color: #ddaf49;
    font-family: 'Montserrat', sans-serif;
    color: white;
    /* trying... */
    /* overflow: hidden; */
}

#header {
    /* Need position: fixed; for FCC */
    position: fixed; 
    z-index:1;
    display: flex;
    flex: 0 0 auto;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    border-bottom: 4px solid #88c9f9;
    background-color: #ddaf49;
    width: 100%;
}

main {
    /* Need margin-top: 90px; for FCC */
    margin-top: 90px;
    /* flex: 1 1 auto; this option makes a sticky footer */
    flex: 1 0 auto;
    overflow-y: auto;
    position: relative;
}

footer {
    display:flex;
    flex-direction: row wrap;
    justify-content: space-between;
    align-items: center;
    /* flex-shrink: 0; */
    height: 80px;
    background-color: #ddaf49;
    border-top: 4px solid #88c9f9;
}

.footer-links {
    display: flex;
    flex-direction: row wrap;
    justify-content: space-between;
}

.footer-links > p {
    padding-right: 15px;
}

h1, 
h2, 
h3 {
    font-family: 'Manrope', sans-serif;
    letter-spacing: 2px;
    text-align: center;
}

.intro-h1 {
    padding-top: .5rem;
    /* background-color: #5c913b; */
    font-size: 2.5rem;
    text-shadow: 3px 3px 2px midnightblue;
}

.intro-p {
    padding-bottom: .5rem;
    background-color: #5c913b;
    border-top: 5px solid #88c9f9;
    border-bottom: 5px solid #88c9f9;
    font-size: 1.5rem;
    text-align: center;
    text-shadow: 2px 1px 1px midnightblue;
}

section {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 50px;
    width: 100%;
}

.section-header {
    font-size: 2.5rem;
    padding: 25px;
    text-shadow: 3px 3px 2px midnightblue;
    /* margin-bottom: 10px; */
}

input {
    border-style: solid;
}

li {
    list-style: none;
}

.nav-bar a {
    margin: 0 .5rem 0 .5rem;
    text-decoration: none;
}

.header-logo {
    display: flex;
    flex-grow: 1;
    align-items: center;
}

#header-img > img,
#footer-img {
    border-radius: 50%;
}

.nav-bar {
    display: flex;
    justify-content: flex-end;
    /* flex-grow: 1; */
    padding-right: 10px;
}

.nav-bar > ul {
    display: flex;
    flex-direction: row;
}

#why-travel > iframe {
    padding-top: 20px;
}

.travel-benefits {
    display: flex;
    flex-direction: column;
    width: 80%;
}

.travel-ben-row {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    /* padding: 1.5rem; */
    padding: 1.5rem 0 1.5rem 0;
    font-size: 30px;
}

.travel-ben-row > i {
    padding: 0 50px 0 50px;
    font-size: 50px;
    color: #88c9f9;
    text-shadow: 3px 3px 2px midnightblue;
}

#offerings > h3 {
    margin-top: 25px;
    margin-bottom: 10px;
}

.cards {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    padding: 5px;
    width: 90%;
}

.card {
    display: flex;
    flex-flow: column wrap;
    background-color: #88c9f9;
    border: 5px solid #5c913b;
    margin: 5px;
    height: 400px;
    width: 350px;
    /* font-size: 1.2rem; */
    /* color: #5c913b; */
}

.card > .card-title {
    display: flex;
    justify-content: center;
    align-items:center;
    flex-grow: 1;
    background-color: #5c913b;
    width: 100%;
    color: white;
    padding: 7px;
    text-align: center;
    font-weight: 900;
    font-size: 2rem;
}

.card > ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    flex-grow: 1;
    padding: 1rem;
    text-align:left;
    font-weight: 600;
    font-size: 20px;
}

.card > .pricing {
    display: flex;
    flex-grow: 1;
    align-items: center;
    justify-content: center;
    width: 100%;
    text-align: center;
    background-color: #5c913b;
}

form {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    width: 40%;
}

form > input {
    margin: .25rem;
    padding: .55rem;
    width: 100%;
    height: 3rem;
}

.page-button {
    background-color: #5c913b;
    color: white;
    padding: 6px;
    cursor: pointer;
    font-size: 24px;
}

/* .nav-link, .header-logo > p {
    font-size: 18px;
} */

#about-us > p {
    width: 60%;
    font-size: 24px;
    text-align: justify;
}

.rounded-border {
    border-radius: 15px;
}

.smaller-image {
    width: 75px;
}

.medium-image {
    margin-top: 10px;
    width: 300px;
    border-radius: 50%;
}

li > .fas {
    padding: 2px;
}

.fa-check {
    color: #5c913b;
}

.fa-times {
    color: red;
}

.subtext {
    font-size: 15px;
}

.price-text {
    font-size: 30px;
    font-weight: 900;
}

.box-shadow {
    box-shadow: 4px 4px 15px midnightblue;
}

.text-shadow {
    text-shadow: 1px 3px 15px midnightblue;
}


/* CSS TRICKS */
/* Medium screens */
@media all and (max-width: 850px) {
    header {
      /* When on medium sized screens, we center it by evenly distributing empty space around items */
      justify-content: space-around;
    }

    .nav-bar {
        display: flex;
        margin-bottom: 1rem;
        justify-content: center;
    }

    /* .nav-bar > ul {
        display: flex;
        flex-direction: column;
    } */

    .nav-bar > ul > li {
        margin-top: 50px;
    }
    /* Might need to change for FCC */
    /* main {
        margin-top: 75px;
    } */

    .cards {
        width: 100%;
    }

    .card {
        margin-top: 50px;
    }

    form {
        width: 80%;
    }

    iframe {
        width: 100%;
    }

    .travel-benefits {
        width: 100%;
    }

    .travel-ben-row {
        display: flex;
        flex-flow: column wrap;
        align-items: center;
        width: 100%;
    }

    .travel-ben-row > i {
        /* top, right/left, bottom */
        padding: 0 0 10px;
    }

    .travel-ben-row > p {
        /* top/bottom left/right */
        padding: 0 20px;
        text-align: center;

    }

    footer {
        display:flex;
        flex-direction: column;
        width: 100%;
        align-items: center;
    }

    #about-us > p {
        text-align: left;
    }
  }
  
  /* Small screens */
  @media all and (max-width: 500px) {
    header {
      /* On small screens, we are no longer using row direction but column */
      flex-direction: column;
      align-items: center;
    }
  }

  /* 
  
  Resources 

  FlexBox: https://css-tricks.com/snippets/css/a-guide-to-flexbox/#basics-and-terminology

  FlexBox Sticky Header and Footer
  https://codepen.io/5am/pen/xNXOGx
  
  */

